projects/instavote/dev/hpalb2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendresourcesdeploy
  namespace: test
spec:
  replicas: 3
  minReadySeconds: 5
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontendc
      labels:
        app: frontend
    spec:
      containers:
        - name: frontendcont
          image: schoolofdevops/frontend:v1.0
          resources:
            requests:
              cpu: '0.25m'
              memory: '128Mi'
            limits:
              cpu: '0.50m'
              memory: '256Mi'
