projects/instavote/dev/redis-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
  namespace: instavote
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: back
      role: redis
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: redis
        role: redis
        tier: back
        version: latest
    spec:
      containers:
      - image: schoolofdevops/redis:latest
        imagePullPolicy: Always
        name: redis
        volumeMounts:
          - name: myredisconf
            mountPath: /etc/redis.conf
            subPath: redis.conf
        ports:
        - containerPort: 6379
          protocol: TCP
      restartPolicy: Always
      volumes:
        - name: myredisconf
          configMap:
            name: myredisconf
