projects/instavote/dev/vote-deploy-recreate.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: votedeployment
  namespace: instavote
  labels:
    role: vote
spec:
  replicas: 12
  strategy:
    type: Recreate
  revisionHistoryLimit: 4
  paused: false
  minReadySeconds: 5
  selector: 
    matchLabels:
      role: vote
    matchExpressions:
      - {key: version, operator: In, values: [v1,v1,v3]}
  template:
    metadata:
      name: vote
      labels:
        app: python
        role: vote
        version: v1
    spec:
      containers:
        - name: app
          image: schoolofdevops/vote:v1
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
