projects/instavote/dev/result-svc-lab.yaml
apiVersion: v1
kind: Service
metadata:
  name: resultservice
  namespace: instavote
  labels:
    role: result
spec:
  type: NodePort
  selector:
    role: result
    version: latest
  ports:
    - port: 81
      targetPort: 80
      nodePort: 32149
