projects/instavote/dev/servicelab1.yaml
apiVersion: v1
kind: Service
metadata:
  name: testservice
  labels:
    app: webapp
spec:
  selector:
    app: webapp
  type: NodePort
  ports:
    - port: 8888
