projects/instavote/dev/servicelab2.yaml
apiVersion: v1
kind: Service
metadata:
  name: voteservicelab2
  namespace: instavote
  labels:
    role: vote
spec:
  selector:
    role: vote
  ports:
    - port: 80
      targetPort: 80
  externalIPs:
    - 3.17.177.249
  type: LoadBalancer
