projects/instavote/dev/servicelab3.yaml
apiVersion: v1
kind: Service
metadata:
  name: labvoteservice
  namespace: instavote
  labels:
    role: vote
spec:
  selector:
    role: vote
  ports:
    - port: 80
      targetPort: 80
