projects/instavote/dev/vote-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: voteservice
  labels:
    role: vote
spec:
  selector:
    version: v1
    role: vote
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32600
  type: NodePort
